force-app/main/default/objects/Account_Interest__c/Account_Interest__c.object-meta.xml
<CustomObject>
    <label>Account Interest</label>
    <nameField>
        <displayFormat>AI-{0000}</displayFormat>
        <label>Account Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>