force-app/main/default/objects/Account_Interest__c/fields/Deal_Link__c.field-meta.xml
<CustomField>
    <fullName>Deal_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Link</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Account Interests</relationshipLabel>
    <relationshipName>Account_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>